--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 05:05:22 2018</p>
+         Last Run: Tue Jul 10 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 05:05:22 2018</p>
+         Last Run: Tue Jul 10 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>S</td>
-                        <td>15</td>
+                        <td>SSE</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -246,7 +246,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
@@ -260,9 +260,9 @@
                         <td>0</td>
                         <td>31</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -272,9 +272,9 @@
                         <td>0</td>
                         <td>36</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>SSE</td>
-                        <td>4</td>
+                        <td>11</td>
+                        <td>SE</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -282,9 +282,9 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>42</td>
+                        <td>44</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SE</td>
                         <td>1</td>
                      </tr>
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "31",
                  "30",
-                 "29",
                  "31",
                  "36",
-                 "42"
+                 "44"
                ]
              },
              {
@@ -426,10 +426,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
                  "14",
-                 "10",
-                 "4",
+                 "14",
+                 "11",
+                 "5",
                  "1"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 05:05:22 2018</p>
+         Last Run: Tue Jul 10 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,63 +468,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Chance of Rain</td>
-                        <td>11</td>
-                        <td>11</td>
-                        <td>33</td>
-                        <td>81</td>
+                        <td>Overcast</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>24</td>
+                        <td>82</td>
                         <td>1</td>
-                        <td>21</td>
-                        <td>NNW</td>
-                        <td>96</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Chance of Rain</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>31</td>
-                        <td>75</td>
-                        <td>2</td>
                         <td>19</td>
                         <td>NNW</td>
                         <td>95</td>
                      </tr>
                      <tr>
-                        <td>12:00 PM</td>
+                        <td>11:00 AM</td>
                         <td>Overcast</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>13</td>
-                        <td>67</td>
-                        <td>3</td>
-                        <td>19</td>
+                        <td>24</td>
+                        <td>74</td>
+                        <td>2</td>
+                        <td>18</td>
                         <td>NNW</td>
-                        <td>91</td>
+                        <td>94</td>
                      </tr>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>12:00 PM</td>
+                        <td>Overcast</td>
                         <td>13</td>
                         <td>13</td>
                         <td>11</td>
                         <td>64</td>
-                        <td>5</td>
-                        <td>18</td>
+                        <td>4</td>
+                        <td>19</td>
                         <td>NNW</td>
-                        <td>65</td>
+                        <td>87</td>
                      </tr>
                      <tr>
-                        <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>01:00 PM</td>
+                        <td>Partly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>11</td>
-                        <td>60</td>
+                        <td>10</td>
+                        <td>59</td>
                         <td>6</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>69</td>
+                        <td>56</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>9</td>
+                        <td>56</td>
+                        <td>6</td>
+                        <td>18</td>
+                        <td>NNW</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -570,11 +570,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "11",
-                 "12",
+                 "10",
                  "12",
                  "13",
-                 "14"
+                 "14",
+                 "15"
                ]
              },
              {
@@ -583,11 +583,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "11",
-                 "12",
+                 "10",
                  "12",
                  "13",
-                 "14"
+                 "14",
+                 "15"
                ]
              }
            ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
-                 "31",
-                 "13",
+                 "24",
+                 "24",
                  "11",
-                 "11"
+                 "10",
+                 "9"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "75",
-                 "67",
+                 "82",
+                 "74",
                  "64",
-                 "60"
+                 "59",
+                 "56"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
                  "95",
-                 "91",
-                 "65",
-                 "69"
+                 "94",
+                 "87",
+                 "56",
+                 "58"
                ]
              }
            ]
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 05:05:22 2018</p>
+         Last Run: Tue Jul 10 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -712,7 +712,7 @@
                         <td>1</td>
                         <td>57</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>WSW</td>
                         <td>9</td>
                      </tr>
@@ -734,7 +734,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>19</td>
                         <td>SSW</td>
@@ -745,7 +745,7 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>38</td>
                         <td>6</td>
                         <td>18</td>
@@ -881,7 +881,7 @@
                  "1",
                  "0",
                  "0",
-                 "3",
+                 "2",
                  "2"
                ]
              },
@@ -892,7 +892,7 @@
                "data":[
                  "57",
                  "49",
-                 "43",
+                 "44",
                  "38",
                  "36"
                ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 05:05:22 2018</p>
+         Last Run: Tue Jul 10 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -948,11 +948,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>24</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -964,7 +964,7 @@
                         <td>1</td>
                         <td>18</td>
                         <td>SE</td>
-                        <td>22</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -972,11 +972,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>19</td>
                         <td>SE</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
+                 "27",
                  "31",
-                 "36"
+                 "35"
                ]
              },
              {
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "25",
                  "24",
-                 "22",
-                 "19"
+                 "20"
                ]
              }
            ]
