--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 06:05:10 2018</p>
+         Last Run: Tue Jul 10 07:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>18</td>
-                        <td>56</td>
+                        <td>Partly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>8</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>67</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>33</td>
-                        <td>59</td>
+                        <td>Partly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>17</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NW</td>
-                        <td>63</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>35</td>
-                        <td>61</td>
+                        <td>Partly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NW</td>
-                        <td>68</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,9 +106,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "20",
                  "19",
-                 "18",
-                 "17"
+                 "18"
                ]
              },
              {
@@ -117,9 +117,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "20",
                  "19",
-                 "18",
-                 "17"
+                 "18"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "33",
-                 "35"
+                 "8",
+                 "17",
+                 "18"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "59",
-                 "61"
+                 "55",
+                 "58",
+                 "62"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
-                 "63",
-                 "68"
+                 "44",
+                 "36",
+                 "40"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 06:05:10 2018</p>
+         Last Run: Tue Jul 10 07:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 06:05:10 2018</p>
+         Last Run: Tue Jul 10 07:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 06:05:10 2018</p>
+         Last Run: Tue Jul 10 07:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -712,9 +712,9 @@
                         <td>1</td>
                         <td>57</td>
                         <td>2</td>
-                        <td>18</td>
-                        <td>WSW</td>
-                        <td>9</td>
+                        <td>14</td>
+                        <td>SSW</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -724,9 +724,9 @@
                         <td>0</td>
                         <td>49</td>
                         <td>3</td>
-                        <td>21</td>
-                        <td>SW</td>
-                        <td>8</td>
+                        <td>19</td>
+                        <td>SSW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -736,33 +736,33 @@
                         <td>0</td>
                         <td>44</td>
                         <td>4</td>
-                        <td>19</td>
-                        <td>SSW</td>
-                        <td>7</td>
+                        <td>18</td>
+                        <td>S</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>2</td>
-                        <td>38</td>
+                        <td>0</td>
+                        <td>39</td>
                         <td>6</td>
                         <td>18</td>
                         <td>S</td>
-                        <td>7</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>2</td>
+                        <td>0</td>
                         <td>36</td>
                         <td>7</td>
-                        <td>16</td>
-                        <td>S</td>
-                        <td>8</td>
+                        <td>14</td>
+                        <td>SSE</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -881,8 +881,8 @@
                  "1",
                  "0",
                  "0",
-                 "2",
-                 "2"
+                 "0",
+                 "0"
                ]
              },
              {
@@ -893,7 +893,7 @@
                  "57",
                  "49",
                  "44",
-                 "38",
+                 "39",
                  "36"
                ]
              },
@@ -902,11 +902,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "12",
+                 "11",
                  "9",
-                 "8",
-                 "7",
-                 "7",
-                 "8"
+                 "9",
+                 "9"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 06:05:10 2018</p>
+         Last Run: Tue Jul 10 07:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -945,10 +945,10 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>0</td>
                         <td>27</td>
+                        <td>27</td>
+                        <td>0</td>
+                        <td>26</td>
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
@@ -957,14 +957,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>29</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>SE</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -974,9 +974,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>16</td>
                         <td>SE</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -1020,8 +1020,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "27",
                  "26",
-                 "25",
                  "24"
                ]
              },
@@ -1031,8 +1031,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "27",
                  "26",
-                 "25",
                  "24"
                ]
              }
@@ -1094,8 +1094,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
-                 "31",
+                 "26",
+                 "29",
                  "35"
                ]
              },
@@ -1105,8 +1105,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "25",
-                 "24",
-                 "20"
+                 "23",
+                 "19"
                ]
              }
            ]
